# rag-ml

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  fly.toml  main.py  pyproject.toml  pytest.ini
app/: main.py
app/api/v1/: admin.py  health.py  ingest.py  query.py
app/core/: config.py  deps.py
app/models/: schemas.py
app/services/: embedding_service.py  generation_service.py  ingestion_service.py  retrieval_service.py  vector_store.py
data/: demo_dataset.txt
frontend/: index.html  ingest.html
frontend/assets/: styles.css
tests/: test_embedding_service.py  test_generation_service.py  test_ingest.py  test_ingestion_service.py  test_main.py  test_retrieval_service.py  test_vector_store.py
