[tool.poetry]
name = "rag-ml"
version = "0.0.1"
description = "Retrieval-Augmented Generation Demo"
authors = ["Meir Garfinkel <meirgarfinkel@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic-settings = "^2.5.0"
faiss-cpu = "^1.8.0"
openai = "^1.8.0"
sentence-transformers = "^3.0.1"
torch = "^2.4.0"
numpy = "^2.3.5"
typing-extensions = "^4.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
